# noetive-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
examples/: custom_retry.rs  errors.rs  health.rs  lint.rs  publish_text.rs  publish_vector.rs  search.rs  subscribe.rs
src/: lib.rs
src/semantik/: client.rs  defaults.rs  error.rs  health.rs  limits.rs  lint.rs  mod.rs  publish.rs  retry.rs  search.rs  sse.rs  subscribe.rs  transport.rs  validate.rs  version.rs
tests/: integration.rs  wire.rs
